# fish

./: .dockerignore  .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  Makefile  README.md  TODO  docker-compose.yml
.github/: settings.yml
.github/actions/make-dist/: action.yml
.github/actions/make-version/: action.yml
.github/workflows/: 03.release.yml
docs/: CHANGELOG.md  CONTRIBUTING.md  SECURITY.md  SUPPORT.md  cargo.md  cicd.md  files.md  index.md  make.md
make/: init.sql
src/: fish.rs  fishd.rs  lib.rs  main.rs
tests/: postgres.rs
