[package]
name = "fish"
version = "0.0.0"
description = "Generate Random Fish Names"
license = "MIT"
publish = false
edition = "2021"
rust-version = "1.56"
include = [
	"*",
	"!/target/**",
	"!/config.mk",
	"!/.git/**",
]

[[bin]]
name = "fish"
path = "src/fish.rs"

[lib]
name = "fish"

[dependencies]
clap = "4.3"
thiserror = "1.0"
