[package]
name = "fish"
version = "0.1.0"
description = "Generate Random Fish Names"
license = "MIT"
publish = false
edition = "2021"
rust-version = "1.56"
include = [
	"*",
	"!/target/**",
	"!/config.mk",
	"!/.git/**",
]

[[bin]]
name = "fish"
path = "src/fish.rs"

[[bin]]
name = "fishd"
path = "src/fishd.rs"

[lib]
name = "fish"

[dependencies]
axum = "0.7"
clap = "4.3"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio"] }
surf = { version = "2.3", default-features = false, features = ["h1-client"] }
thiserror = "1.0"
tokio = { version = "1.32", features = ["macros", "rt-multi-thread"] }

[features]
test_postgres = []
